fixed scroll issue on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -190,19 +190,12 @@
   }
 
   .unia {
-    position: absolute;
-    width: 35vw;
-    right: 0;
-    top: calc(100vh - 3.3vw);
-    background-color: white;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    img {
-      width: 90%;
-      height: 90%;
-    }
+
   }
 }
