--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
     background-color: rgb(29, 29, 29);
     width: 100vw;
-    height: 70px;
+    height: 100px;
     position: sticky;
     bottom: 0;
     display: grid;
@@ -12,6 +12,7 @@
         grid-column: span 12;
         color: white;
         font-size: 0.8em;
+        margin-top: 10px;
     }
 
     ul {
